--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -3,7 +3,9 @@
     <ul class="dropdown menu" data-dropdown-menu>
       <li><strong><%= link_to "Larping 2019", root_path %></strong></li>
       <li><%= link_to "Larps", larps_path %></li>
-      <% unless current_user %>
+      <% if current_user %>
+        <li><%= link_to current_user.name, user_path(current_user.id) %></li>
+      <% else %>
         <li><%= link_to "Login", new_user_session_path %></li>
         <li><%= link_to "Sign up", new_user_registration_path %></li>
       <% end %>
