create dark and light modes

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -12,9 +12,13 @@
     </ul>
   </div>
   <div class="top-bar-right">
-    <ul class="menu">
-      <li><input type="search" placeholder="Search"></li>
-      <li><button type="button" class="button">Search</button></li>
-    </ul>
+  <i class="">
+    <div class="switch large">
+      <input class="switch-input" id="theme-chooser" type="checkbox" name="exampleSwitch">
+      <label class="switch-paddle fab" for="theme-chooser">
+        <span class="switch-active" aria-hidden="true" id="theme-for-orcs"></span>
+        <span class="switch-inactive" aria-hidden="true" id="theme-for-elves"></span>
+      </label>
+    </div>
   </div>
 </div>
