--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -82,6 +82,11 @@ $black: #8a8a8a;
 $white: #fefefe;
 $body-background: #f4f9f4;
 $body-font-color: #5c8d89;
+$base-dark: #202040;
+$base-dark-contrast: #602080;
+$base-mid: #202060;
+$base-mid-contrast: #b030b0;;
+
 $body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
@@ -755,8 +760,8 @@ $slider-radius: $global-radius;
 // 49. Switch
 // ----------
 
-$switch-background: $medium-gray;
-$switch-background-active: $primary-color;
+$switch-background: $primary-color;
+$switch-background-active: $base-dark-contrast;
 $switch-height: 2rem;
 $switch-height-tiny: 1.5rem;
 $switch-height-small: 1.75rem;
