--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,6 @@
+@import "font-awesome-sprockets";
+@import "font-awesome";
 @import "foundation_and_overrides";
 @import "form";
+@import "base/*";
+@import "components/*";
