--- a/app/assets/stylesheets/components/_switch.scss
+++ b/app/assets/stylesheets/components/_switch.scss
@@ -6,12 +6,7 @@
     font-size: 0.7rem;
     width: 13em;
     &::after {
-      background-color: transparent;
-      content: "\f286";
-      font-style: normal;
-      font-size: 2em;
-          display: flex;
-    align-items: center;
+      @include switch-icon("\f286");
     }
   }
 
