--- a/app/views/larps/_submenu.html.erb
+++ b/app/views/larps/_submenu.html.erb
@@ -1,4 +1,4 @@
-<ul class="menu cell">
+<ul class="menu cell navigation__sub-menu">
   <li><%= link_to "All Larps", larps_path %></li>
   <li><%= link_to "New Larp", new_larp_path %></li>
   <li><%= link_to "My Larps", new_larp_path %></li>
