--- a/app/views/larps/_character_accordion.html.erb
+++ b/app/views/larps/_character_accordion.html.erb
@@ -1,17 +1,15 @@
 <article class="cell medium-4">
   <ul class="accordion" role="tablist" data-accordion data-allow-all-closed="true" data-multi-expand="true">
-    <li class="accordion-item" data-accordion-item>
-      <a href="#panel11a" role="tab" class="accordion-title" id="panel11a-heading" aria-controls="panel11a">Accordion 1</a>
-        <div id="panel11a" class="accordion-content" role="tabpanel" data-tab-content aria-labelledby="panel11a-heading">
-        Answer 1
-        </div>
-    </li>
-    <li class="accordion-item" data-accordion-item>
-      <a href="#" class="accordion-title">Character 2</a>
-      <div class="accordion-content" data-tab-content>
-        <p>Here is a snippet of the description for this character</p>
-        <a href="#">View more</a>
-      </div>
-    </li>
+    <% @larp.characters.each do |character| %>
+      <li class="accordion-item" data-accordion-item>
+        <a href="#character-<%= character.id %>" role="tab" class="accordion-title" id="character-<%= character.id %>-heading" aria-controls="character-<%= character.id %>"><%= character.name.titleize %></a>
+          <div id="character-<%= character.id %>" class="accordion-content" role="tabpanel" data-tab-content aria-labelledby="character-<%= character.id %>-heading">
+          <p><strong>Occupation:</strong> <%= character.occupation %></p>
+          <p><strong>Race:</strong> <%= character.description %></p>
+          <p><%= character.description %></p><br/>
+          <%= link_to "Apply", "#", class: "button primary expanded" %>
+          </div>
+      </li>
+    <% end %>
   </ul>
 </article>
