--- a/app/views/larps/show.html.erb
+++ b/app/views/larps/show.html.erb
@@ -1,6 +1,7 @@
 <%= render "submenu" %>
 <div class="cell">
   <h1><%= @larp.title %> by <%= @larp.user.name %></h1>
+  <%= render "larps/admin/manage_larp", larp: @larp %>
   <section class="grid-x grid-margin-x">
     <article class="cell medium-8">
       <small>Starts on: <%= @larp.start_date.strftime("%d %b %Y") %></small><br/>
