--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -85,8 +85,9 @@ $body-font-color: #5c8d89;
 $base-dark: #202040;
 $base-dark-contrast: #602080;
 $base-mid: #202060;
-$base-mid-contrast: #b030b0;;
-
+$base-mid-contrast: #b030b0;
+$dark-theme-link: #77FFAE;
+$dark-theme-warning-link: #FF471B;
 $body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
@@ -422,7 +423,7 @@ $legend-padding: rem-calc(0 3);
 $form-spacing: rem-calc(16);
 $helptext-color: $black;
 $helptext-font-size: rem-calc(13);
-$helptext-font-style: italic;
+$helptext-font-style: normal;
 $input-prefix-color: $black;
 $input-prefix-background: $light-gray;
 $input-prefix-border: 1px solid $medium-gray;
