add links to edit larp and characters and add helper methods to render admin controls

--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= f.fields_for :address, Address.new do |a| %>
+<%= f.fields_for :address, @address do |a| %>
     <div class="field">
         <%= a.label :street %>
         <%= a.text_field :street %>
