--- a/app/views/characters/_form.html.erb
+++ b/app/views/characters/_form.html.erb
@@ -7,7 +7,7 @@
 
   <div class="field">
     <%= f.label :description %>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, rows: 5 %>
   </div>
 
   <div class="field">
