--- a/app/views/larps/_form.html.erb
+++ b/app/views/larps/_form.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="field">
       <%= f.label :description %>
-      <%= f.text_area :description %>
+      <%= f.text_area :description, rows: 5 %>
   </div>
 
   <div class="field">
