--- a/app/views/larps/admin/_manage_larp.html.erb
+++ b/app/views/larps/admin/_manage_larp.html.erb
@@ -1,2 +1,6 @@
-<%= link_to "Edit Larp", edit_larp_path(larp), class: "button primary" %>
-<%= link_to "Add New Character", new_character_path(larp_id: larp.id), class: "button primary" %>
+<% if larp.belongs_to_current_user?(current_user) %>
+  <%= link_to "Edit Larp", edit_larp_path(larp), class: "button primary expanded" %>
+  <%= link_to "Add New Character", new_character_path(larp_id: larp.id), class: "button primary expanded" %>
+  <hr>
+    <%= link_to "Delete LARP", larps_path(larp), method: :destroy, class: "button warning expanded", alert: "Are you sure? Deleting a LARP is permenant."%>
+<% end %>
