--- a/app/views/larps/new.html.erb
+++ b/app/views/larps/new.html.erb
@@ -1,9 +1,10 @@
 <% content_for :title, "Create a LARP" %>
 <%= render "submenu" %>
 <div class="cell small-12 medium-6 medium-offset-3">
-    <div class="grid-x grid-margin-x grid-margin-y grid-padding-x form__container">
-        <div class="cell">
-            <%= render "form" %>
-        </div>
+  <div class="grid-x grid-margin-x grid-margin-y grid-padding-x form__container">
+    <div class="cell">
+      <h1>Create a LARP</h1>
+      <%= render "form" %>
     </div>
+  </div>
 </div>
