--- a/app/views/larps/show.html.erb
+++ b/app/views/larps/show.html.erb
@@ -1,7 +1,6 @@
 <%= render "submenu" %>
 <div class="cell">
   <h1><%= @larp.title %> by <%= @larp.user.name %></h1>
-  <%= render "larps/admin/manage_larp", larp: @larp %>
   <section class="grid-x grid-margin-x">
     <article class="cell medium-8">
       <small>Starts on: <%= @larp.start_date.strftime("%d %b %Y") %></small><br/>
@@ -14,10 +13,10 @@
         </address>
       </small>
       <p><%= @larp.description %></p>
-      <% if current_user == @larp.user %>
-        <p><%= link_to "Edit", edit_larp_path(@larp)%><p>
-      <% end %>
     </article>
-    <%= render "character_accordion" %>
+    <article class="cell medium-4">
+      <%= render "larps/admin/manage_larp", larp: @larp %>
+      <%= render "character_accordion" %>
+    </article>
   </section>
 </div>
