--- a/app/views/larps/_form.html.erb
+++ b/app/views/larps/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for @larp do |f| %>
+  <%= f.hidden_field :user_id, value: current_user.id %>
   <div class="field">
       <%= f.label :title %>
       <%= f.text_field :title %>
