--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -5,6 +5,7 @@
       <li><%= link_to "Larps", larps_path %></li>
       <% if current_user %>
         <li><%= link_to current_user.name, user_path(current_user.id) %></li>
+        <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
       <% else %>
         <li><%= link_to "Login", new_user_session_path %></li>
         <li><%= link_to "Sign up", new_user_registration_path %></li>
