--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,39 +3,42 @@
   <div class="grid-x grid-margin-x grid-margin-y grid-padding-x form__container">
     <div class="cell">
       <h2>Sign up</h2>
+      <%= render "devise/socials/omniauth_buttons" %>
+      <section class="authentication__container">
+        <p>or</p>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), autocomplete: false) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
 
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), autocomplete: false) do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
+          <div class="field">
+            <%= f.label :name %>
+            <%= f.text_field :name, autofocus: true %>
+          </div>
 
-        <div class="field">
-          <%= f.label :name %>
-          <%= f.text_field :name, autofocus: true %>
-        </div>
+          <div class="field">
+            <%= f.label :email %>
+            <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          </div>
 
-        <div class="field">
-          <%= f.label :email %>
-          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-        </div>
+          <div class="field">
+            <%= f.label :password %>
+            <% if @minimum_password_length %>
+            <small>(<%= @minimum_password_length %> characters minimum)</small>
+            <% end %>
+            <%= f.password_field :password, autocomplete: "new-password" %>
+          </div>
 
-        <div class="field">
-          <%= f.label :password %>
-          <% if @minimum_password_length %>
-          <small>(<%= @minimum_password_length %> characters minimum)</small>
-          <% end %>
-          <%= f.password_field :password, autocomplete: "new-password" %>
-        </div>
+          <div class="field">
+            <%= f.label :password_confirmation %>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+          </div>
 
-        <div class="field">
-          <%= f.label :password_confirmation %>
-          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-        </div>
+          <div class="actions">
+            <%= f.submit "Sign up", class: "button primary" %>
+          </div>
+        <% end %>
 
-        <div class="actions">
-          <%= f.submit "Sign up", class: "button primary" %>
-        </div>
-      <% end %>
-
-      <%= render "devise/shared/links" %>
+        <%= render "devise/shared/links" %>
+      </section>
     </div>
   </div>
 </div>
