--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <div class="alert alert-<%= key %>"><%= value %></div>
   <% end %>
   <div class="grid-container">
-    <div class="grid-x grid-margin-x">
+    <div class="grid-x grid-margin-x grid-margin-y grid-padding-y">
       <%= yield %>
     </div>
   </div>
