--- a/app/views/devise/socials/_omniauth_buttons.html.erb
+++ b/app/views/devise/socials/_omniauth_buttons.html.erb
@@ -1,8 +1,8 @@
 <div class="social-media__buttons">
-  <%= link_to omniauth_authorize_path(:user, :google_oauth2), method: :post, class: "social-media__buttons--google" do %>
+  <%= link_to user_google_oauth2_omniauth_authorize_path, method: :post, class: "social-media__buttons--google" do %>
     <i class="fab fa-google"></i>
   <% end %>
-  <%= link_to omniauth_authorize_path(:user, :facebook), method: :post, class: "social-media__buttons--facebook" do %>
+  <%= link_to user_facebook_omniauth_authorize_path, method: :post, class: "social-media__buttons--facebook" do %>
     <i class="fab fa-facebook-f"></i>
   <% end %>
 </div>
