--- a/app/assets/stylesheets/components/_flash.scss
+++ b/app/assets/stylesheets/components/_flash.scss
@@ -1,8 +1,15 @@
 .alert {
   &.alert-notice {
     background: $base-mid-contrast;
-    padding: 1em 0;
     color: $body-background;
+  }
+  &.alert-alert {
+    background: #ec8f6a;
+    color: $body-background;
+  }
+  &.alert-alert,
+  &.alert-notice {
+    padding: 1em 0;
     text-align: center;
     font-weight: bold;
   }
