move repeated css to mixin

--- a/app/assets/stylesheets/base/_mixins.scss
+++ b/app/assets/stylesheets/base/_mixins.scss
@@ -8,6 +8,12 @@
 }
 
 @mixin here-be-dragons() {
+  @extend .fas;
+  content: "\f714";
+  font-size: 1.35em;
+  font-style: normal;
+  margin: 0 1em;
+  color: $dark-theme-warning-link;
   animation: blink-animation 1s steps(5, start) infinite;
   -webkit-animation: blink-animation 1s steps(5, start) infinite;
   @keyframes blink-animation {
