--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -1,5 +1,6 @@
 .form__container {
-    background: #fefefe;
-    border: $global-border;
-    margin: 2em 0;
+  background: #fefefe;
+  border: $global-border;
+  margin: 2em 0;
+  position: relative;
 }
