--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -88,6 +88,7 @@ $base-mid: #202060;
 $base-mid-contrast: #b030b0;
 $dark-theme-link: #77FFAE;
 $dark-theme-warning-link: #FF471B;
+$light-theme-alert: #ec8f6a;
 $body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
