fix character redirect

--- a/app/views/characters/_form.html.erb
+++ b/app/views/characters/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @character, autocomplete: false do |f| %>
+<%= form_with model: @character, autocomplete: false, local: true do |f| %>
   <%= f.hidden_field :larp_id, value: @larp.id %>
   <div class="field">
     <%= f.label :name %>
