--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -1,4 +1,4 @@
-<section class="cell small-12 medium-6 medium-offset-3">
+<section class="cell small-12 medium-8 medium-offset-2 large-6 large-offset-3">
   <article class="grid-x grid-margin-x grid-margin-y grid-padding-x form__container">
     <div class="cell">
       <h1>Create Character</h1>
