--- a/app/views/larps/edit.html.erb
+++ b/app/views/larps/edit.html.erb
@@ -1,10 +1,10 @@
 <% content_for :title, "Edit a LARP" %>
 <%= render "submenu" %>
-<div class="cell small-12 medium-6 medium-offset-3">
+<section class="cell small-12 medium-8 medium-offset-2 large-6 large-offset-3">
   <div class="grid-x grid-margin-x grid-margin-y grid-padding-x form__container">
     <div class="cell">
       <h1>Edit <%= @larp.title %></h1>
       <%= render "form" %>
     </div>
   </div>
-</div>
+</section>
