print coverage report and make helpers easier to test

--- a/app/views/larps/index.html.erb
+++ b/app/views/larps/index.html.erb
@@ -9,7 +9,7 @@
             <h2>
               <%= larp.title %>
               <%= display_new_badge(larp) %>
-              <%= display_ownership_badge(larp) %>
+              <%= display_ownership_badge(larp, current_user) %>
             </h2>
             <p><%= larp.description %><p>
           <% end %>
