--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -23,7 +23,7 @@
     <div class="cell medium-4">
       <h3>Cancel my account</h3>
 
-      <%= button_to "Delete account", registration_path(@user), data: { confirm: "Are you sure?" }, method: :delete, class: "button primary" %>
+      <%= button_to "Delete account", registration_path(@user), data: { confirm: "Are you sure?" }, method: :delete, class: "button warning" %>
 
       <%= link_to "Back", :back, class: "button primary" %>
     </div>
