--- a/app/views/larps/show.html.erb
+++ b/app/views/larps/show.html.erb
@@ -3,16 +3,15 @@
   <h1><%= @larp.title %> by <%= @larp.user.name %></h1>
   <section class="grid-x grid-margin-x">
     <article class="cell medium-8">
-      <small>Starts on: <%= @larp.start_date.strftime("%d %b %Y") %></small><br/>
-      <small>Address:
+      <p>Starts on: <%= @larp.start_date.strftime("%d %b %Y") %></p>
         <address>
+          Address:<br/>
           <%= @larp.address.street %><br/>
           <%= @larp.address.suburb %><br/>
           <%= @larp.address.country %><br/>
           <%= @larp.address.postcode %>
         </address>
-      </small>
-      <p><%= @larp.description %></p>
+      <p>Description: <%= @larp.description %></p>
     </article>
     <article class="cell medium-4">
       <%= render "larps/admin/manage_larp", larp: @larp %>
