--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -71,15 +71,29 @@ $global-lineheight: 1.5;
 $foundation-palette: (
   primary: #5c8d89,
   secondary: #f2e3c9,
-  success: #3adb76,
-  warning: #ec8f6a,
+  // success: #3adb76,
+  success: #8fffc3,
+  warning: #c15233,
   alert: #ef4b4b,
 );
 $light-gray: #a7d7c5;
 $medium-gray: #a7d7c5;
 $dark-gray: #5c8d89;
-$black: #8a8a8a;
+// $black: #8a8a8a;
 $white: #fefefe;
+// $body-background: #f4f9f4;
+// $body-font-color: #5c8d89;
+// $base-dark: #202040;
+// $base-dark-contrast: #602080;
+// $base-mid: #202060;
+// $base-mid-contrast: #b030b0;
+// $dark-theme-link: #77FFAE;
+// $dark-theme-warning-link: #FF471B;
+// $light-theme-alert: #ec8f6a;
+
+// WebAIM colors:
+$black: #696969;
+$light-theme-alert: #c15233;
 $body-background: #f4f9f4;
 $body-font-color: #5c8d89;
 $base-dark: #202040;
@@ -88,7 +102,7 @@ $base-mid: #202060;
 $base-mid-contrast: #b030b0;
 $dark-theme-link: #77FFAE;
 $dark-theme-warning-link: #FF471B;
-$light-theme-alert: #ec8f6a;
+
 $body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
